hphp/test/zend/good/Zend/tests/inter_05.php.expectf

Fatal error: a cannot implement Exception - it is not an interface in %s/inter_05.php on line 3
